# Steganos

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md
Prezentare/: Steganografie în mediul digital.pptx
Prezentare/1_bmp_simple/: README  secret_2.xlsx
Prezentare/2_wav_seq/: README
Prezentare/3_png_sstv/: README  me.ppm
Prezentare/4_mp3_metadata/: README
Prezentare/5_newly_created_bmp/: README
docs/: .gitignore  notite.txt  paper.aux  paper.bbl  paper.blg  paper.synctex(busy)  paper.tex  paper.toc  test_doc.tex  to_do_change_to_bib_references.txt
docs/_minted-paper/: 48FED9BD5AAE6BEC9DEC47E2EB765E25F9B04BF65B63AC201D4134BBAE29D482.pygtex  A459316FA4AFAB44D595B23062B5A86AF9B04BF65B63AC201D4134BBAE29D482.pygtex
docs/chapters/: application.tex  audio.tex  images.tex  introduction.tex  methods.tex  references.bib  video.tex
docs/file_examples/: CMakeLists.txt
src/general/: image_algorithms.h  main.cpp  module.h  modules.h  utils.cpp  utils.h
src/general/algorithms/: personal_scramble.cpp  simple_sequential.cpp
src/general/image_algorithms/: personal_scramble.cpp  simple_sequential.cpp
src/general/utils/: byte_utils.cpp  cli_utils.cpp  module_utils.cpp
src/gui/: to_do.txt
src/modules/: all.h
src/modules/audio/: CMakeLists.txt  all.h  mp3.h  wav.h
src/modules/audio/mp3/: mp3_encoder.cpp  mp3_module.cpp
src/modules/audio/wav/: wav_decoder.cpp  wav_encoder.cpp  wav_module.cpp
src/modules/image/: CMakeLists.txt  all.h  bmp.h  png.h
src/modules/image/bmp/: bmp_decoder.cpp  bmp_encoder.cpp  bmp_module.cpp
src/modules/image/png/: lodepng.cpp  png_decoder.cpp  png_encoder.cpp  png_module.cpp
test_data/audio/: sources.txt
test_data/secrets/: .gitignore  test.csv
